# spotifytermrust

./: .env  Cargo.toml  README.md
src/: app.rs  auth.rs  config.rs  main.rs
