[package]
name = "spotify-tui-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
crossterm = "0.27.0"
directories = "6.0.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
ratatui = { version = "0.27.0", features = ["crossterm"] }
rspotify = "0.15.1"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
webbrowser = "1.0.5"
